# ingame-tasks

./: .gitmodules  Readme.org
orbit/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
orbit/include/glad/: glad.h
orbit/src/: file_system.h  geometry.h  glm_extension.h  main.cpp
orbit/src/graphics/: index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_attribute.h  vertex_buffer.cpp  vertex_buffer.h
white_spots/: build.sh
white_spots/src/: main.cpp
